--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,16 +4,15 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY cmd ./cmd
+COPY . .
 COPY internal ./internal
 COPY docs ./docs
 
-WORKDIR /app/cmd/app
 RUN CGO_ENABLED=0 GOOS=linux go build -o main .
 
 FROM alpine:latest
 WORKDIR /root/
-COPY --from=builder /app/cmd/app/main .
+COPY --from=builder /app/main .
 
 EXPOSE 8080
 CMD ["./main"]
